# mlx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust-ci-macos.yaml
crates/mlx/: Cargo.toml
crates/mlx-sys/: Cargo.toml  build.rs
crates/mlx-sys/src/: lib.rs
crates/mlx/examples/: hello.rs
crates/mlx/src/: array.rs  dtype.rs  error.rs  lib.rs  stream.rs
crates/mlxcore/: Cargo.toml
crates/mlxcore-sys/: Cargo.toml  build.rs
crates/mlxcore-sys/src/: lib.rs
crates/mlxcore/examples/: hello.rs
crates/mlxcore/src/: array.rs  dtype.rs  error.rs  lib.rs  stream.rs
crates/mlxr/: Cargo.toml
crates/mlxr-sys/: Cargo.toml  build.rs
crates/mlxr/src/: array.rs  error.rs
