[package]
name = "mlx"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Safe, idiomatic Rust bindings for Apple's MLX array framework."

[features]
default = ["metal", "accelerate"]
metal = ["mlx-sys/metal"]
accelerate = ["mlx-sys/accelerate"]

[dependencies]
mlx-sys.workspace = true
