[package]
name = "mlxr"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Safe, idiomatic Rust bindings for Apple's MLX array framework."

[features]
default = ["metal", "accelerate"]
metal = ["mlxr-sys/metal"]
accelerate = ["mlxr-sys/accelerate"]

[dependencies]
mlxr-sys.workspace = true
